# exercism-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  runtests.py  submit.py
armstrong-numbers/: armstrong_numbers.py
armstrong-numbers/.exercism/: metadata.json
black-jack/: black_jack.py  black_jack_test.py
bob/: bob.py
bob/.exercism/: metadata.json
card-games/: lists.py
cater-waiter/: sets.py
chaitanas-colossal-coaster/: list_methods.py
collatz-conjecture/: collatz_conjecture.py
collatz-conjecture/.exercism/: metadata.json
currency-exchange/: exchange.py
currency-exchange/.exercism/: metadata.json
ellens-alien-game/: classes.py  classes_test.py
ghost-gobble-arcade-game/: arcade_game.py  arcade_game_test.py
ghost-gobble-arcade-game/.exercism/: metadata.json
grains/: grains.py
grains/.exercism/: metadata.json
guidos-gorgeous-lasagna/: HINTS.md  lasagna.py  lasagna_test.py
guidos-gorgeous-lasagna/.exercism/: metadata.json
hello-world/: HELP.md  hello_world.py  hello_world_test.py
hello-world/.exercism/: metadata.json
inventory-management/: dicts.py
leap/: leap.py
leap/.exercism/: metadata.json
little-sisters-essay/: string_methods.py
little-sisters-vocab/: strings.py
locomotive-engineer/: locomotive_engineer.py
making-the-grade/: loops.py
mecha-munch-management/: dict_methods.py
meltdown-mitigation/: conditionals.py
plane-tickets/: generators.py
square-root/: square_root.py
tisbury-treasure-hunt/: tuples.py  tuples_test.py
triangle/: triangle.py
triangle/.exercism/: metadata.json
(+2 files in other folders)
