[project]
name = "python-exercism"
version = "0.1.0"
description = ""
authors = [
    {name = "Willian Silva",email = "silva.williansantos@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
